--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -18,6 +17,8 @@
     </nav>
 
     <div id="icon" class="gameContainer">
+
+
         <div class="container">
             <div class="line"></div>
             <div class="box bt-0 bl-0"><span class="boxtext"></span></div>
@@ -41,9 +42,10 @@
             </div>
         </div>
     </div>
+
     <audio id="mySong">
-    <source src="music.mp3" type="audio/mp3">
-  </audio>
+        <source src="music.mp3" type="audio/mp3">
+    </audio>
     <script>
         var mySong = document.getElementById("mySong")
         var icon = document.getElementById("icon");
@@ -52,10 +54,15 @@
         }
     </script>
     <script src="script.js "></script>
-
+    <footer>
+        <div class="center">
+            Copyright &copy;Created-By-Diptamoy-2022
+        </div>
+    </footer>
 </body>
-<footer class="footer">
-    <p class="copyright">©Created By Diptamoy-2022</p>
-</footer>
+<!-- <footer class="footer"> -->
+<!-- <p class="copyright">©Created By Diptamoy-2022</p> -->
+<!-- </footer> -->
+
 
 </html>
